# pogona

./: .gitignore  LICENSE  meson.build  meson_options.txt  run.sh.in
engine/: defines.h  engine.c  engine.h  event.c  event.h  file_api.c  file_api.h  logger.c  logger.h  math.h  meson.build  pogona.c  renderer.c  renderer.h  util.c  util.h  vector.c  vector.h
engine/math/: mat.h  math.h  vec.h
engine/pch/: pch.h
engine/renderer/: mesh.h  renderer.c  renderer.h
engine/window/: wayland.c  wayland.h  window.c  window.h  x11.c  x11.h  xcb.c  xcb.h  xlib.c  xlib.h
include/pogona/: defines.h  logger.h  pogona.h  types.h  vector.h  visibility.h
pch/: pch.h  vulkan.h
runner/: main.c  meson.build
subprojects/: volk.wrap  vulkan-headers.wrap
subprojects/packagefiles/volk/: meson.build
subprojects/packagefiles/vulkan-headers/: meson.build
tests/: mat.c  meson.build  vec.c  vector.c
vulkan/: entry.c  meson.build
vulkan_ren/: core.c  core.h  defines.h  engine.h  entry.c  memory.c  memory.h  meson.build  pipeline.c  pipeline.h  render.h  render_pass.c  render_pass.h  shader.c  shader.h  surface.c  surface.h  swapchain.c  swapchain.h  synchronization.c  synchronization.h  vulkan.c  vulkan.h
vulkan_ren/shaders/: 2d.frag.glsl  2d.vert.glsl  meson.build  shader.frag.glsl  shader.vert.glsl
